--- a/man/intel.man
+++ b/man/intel.man
@@ -139,6 +139,9 @@ Acceleration Architecture) is the mature backend that was introduced to support
 the GEM driver model. It is in the process of being superseded by \*qSNA\*q
 (Sandybridge's New Acceleration). Until that process is complete, the ability to
 choose which backend to use remains for backwards compatibility.
+\*qEGA\*q is an experimental backend which enables full-hardware acceleration on Intel
+hardware. It allows the GPU to be fully utilized, however it is a very new model and therefore
+highly experimental.
 In addition, there are a pair of sub-options to limit the acceleration for
 debugging use. Specify \*qoff\*q or \*qnone\*q to disable all acceleration, or \*qblt\*q to
 disable render acceleration and only use the BLT engine.
