sna: Fix asynchronous page flips hanging.
I told you so.

This seems to be caused by SNA mixing modifiers, especially with us using Y-tiling preference on Skylake.

So instead do the following:
- Disable Y tiling scanout by default.
- Move Y tiling scanout to an option.
- Move Y color tiling to an option, disabled by default.
- Add a guard in sna_present.c to avoid hanging if all else fails.
- Make sure that we are not doing a scanout pixmap in default_tiling.

--- a/man/intel.man
+++ b/man/intel.man
@@ -376,13 +376,17 @@ Default: Disabled.
 SNA only.
 .TP
 
-.BI "Option \*qPreferYTiling\*q \*q" boolean \*q
-This option tells SNA to prefer using Y-tiling mode, which is faster than typical X-tiling mode on Intel hardware.
+.BI "Option \*qEnableYTilingScanout\*q \*q" boolean \*q
+This option tells SNA to enable Y-tiling for scanout.
 .br
-Ivy Bridge and newer can use this feature typically without issues, with Skylake being able to directly scan-out Y-tiles.
+Highly experimental! 
+.B Works only on Skylake and newer.
+
+.br
+Known to break on NVIDIA Optimus/PRIME setups.
 
 .IP
-Default: Enabled on qualifying hardware.
+Default: Disabled.
 .br
 SNA only.
 .TP
