--- a/NEWS
+++ b/NEWS
@@ -63,7 +63,7 @@ struct optimization and tweaks.
    This provides literally zero performance benefit, it's just that my pahole integration
    will no longer bother me for the next ten years.
 
- * Add an AVX2 BLT path in SNA.
+ * Add an SSE4.2 optimized BLT path in SNA.
 
  * Fix PRIME flipping hanging the entire Xorg session.
 
